--- a/avrtiny861/Makefile
+++ b/avrtiny861/Makefile
@@ -6,7 +6,7 @@ SRCTB=$(PROG)_test.vhdl
 ENTITE=$(PROG)_test
 OPTIONS= --std=02 --ieee=synopsys -fexplicit
 STOPTIME=100us
-COMPOSANT=dm.vhd ioport.vhd   pm.vhd  usi.vhd  IODrdmux.vhd  mcu_core.vhd  timer.vhd timer_multiplexer.vhd diviseur_timer.vhd
+COMPOSANT=dm.vhd ioport.vhd   pm.vhd  usi.vhd  IODrdmux.vhd  mcu_core.vhd  timer.vhd timer_multiplexer.vhd diviseur_timer.vhd diviseur_generique.vhd SPI_RX.vhd SPI_TX.vhd
 
 
 all: compile simule
